auth fix